--- a/main.css
+++ b/main.css
@@ -81,6 +81,17 @@ button:hover {
     height: 20%;
 }
 
+button {
+    margin-top: 30px;
+    border-radius: 2rem;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+}
+
+
 footer {
     background-color: #BBB;
     height: 8vh;
